[gd_scene load_steps=13 format=3 uid="uid://7daf7wtjt7h0"]

[ext_resource type="Script" uid="uid://k2p5068l60fl" path="res://Scripts/Rooms/classroom.gd" id="1_7nha4"]
[ext_resource type="Texture2D" uid="uid://f8y20vlk73s7" path="res://Assets/Emotes/emote_heartBroken.png" id="2_ciq5a"]
[ext_resource type="PackedScene" uid="uid://b35x4b24scnw8" path="res://Scenes/Dialog/QuestionBubble.tscn" id="3_ciq5a"]
[ext_resource type="Texture2D" uid="uid://dnabcrl0l7wb2" path="res://Assets/Emotes/emote_drops.png" id="4_dscc8"]
[ext_resource type="Texture2D" uid="uid://dymcbnj1xdeox" path="res://Assets/Emotes/emote_idea.png" id="5_la1f3"]
[ext_resource type="Texture2D" uid="uid://cc6li3yu1kjj0" path="res://Assets/Emotes/emote_star.png" id="6_3s13x"]
[ext_resource type="Texture2D" uid="uid://mxl1vgopy805" path="res://Assets/IMG_8244.png" id="7_ciq5a"]
[ext_resource type="Texture2D" uid="uid://nixihknj3kf5" path="res://Assets/Mother.png" id="8_ciq5a"]
[ext_resource type="PackedScene" uid="uid://dr3wuuko4m517" path="res://Scenes/Dialog/AnswerBubble.tscn" id="8_s01a7"]
[ext_resource type="Texture2D" uid="uid://dlorolsbfat16" path="res://Assets/Emotes/emote_heart.png" id="9_wblgs"]
[ext_resource type="Texture2D" uid="uid://d4v7swiavfol" path="res://Assets/Desk.png" id="11_ciq5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nha4"]
radius = 21.3776

[node name="Classroom" type="Node2D"]
script = ExtResource("1_7nha4")
questions_answers = Array[Array]([Array[Texture]([ExtResource("2_ciq5a"), ExtResource("5_la1f3"), ExtResource("6_3s13x"), ExtResource("9_wblgs")]), Array[Texture]([ExtResource("4_dscc8"), ExtResource("4_dscc8"), ExtResource("4_dscc8"), ExtResource("6_3s13x")]), Array[Texture]([ExtResource("4_dscc8"), ExtResource("4_dscc8"), ExtResource("4_dscc8"), ExtResource("5_la1f3")])])
question_time = 5.0

[node name="Planet" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(960, 1970)
rotation = -4.10599
scale = Vector2(1.24, 1.24)
texture = ExtResource("7_ciq5a")

[node name="Teacher" type="Sprite2D" parent="."]
position = Vector2(1487, 561)
rotation = 0.409933
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_ciq5a")

[node name="QuestionBubble" parent="." instance=ExtResource("3_ciq5a")]
unique_name_in_owner = true
position = Vector2(1550, 318)
scale = Vector2(2.5, 2.5)

[node name="AnswerBubble1" parent="." instance=ExtResource("8_s01a7")]
unique_name_in_owner = true
position = Vector2(716, 305)
scale = Vector2(2.5, 2.5)

[node name="AnswerBubble2" parent="." instance=ExtResource("8_s01a7")]
unique_name_in_owner = true
position = Vector2(958, 305)
scale = Vector2(2.5, 2.5)

[node name="AnswerBubble3" parent="." instance=ExtResource("8_s01a7")]
unique_name_in_owner = true
position = Vector2(1195, 307)
scale = Vector2(2.5, 2.5)

[node name="TriggerArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(964, 589)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("CircleShape2D_7nha4")
debug_color = Color(0.976029, 0, 0.414963, 0.42)
metadata/_edit_lock_ = true

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(1049, 602)
rotation = 0.0491186
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_ciq5a")
